== 0.2.2 2010-07-26

 * Support for assigning one attachment to another.

== 0.2.1 2010-07-15

 * Path/URL templates may be symbols specifying methods to call to
   generate the path/URL. Method is passed attachment name and style.

== 0.2.0 2010-07-14

 * Remove dimensions and aspect ratio as a storable attributes. Store
   width and height instead.
 * Videos return 0 tracks if the file is missing (but still dimensions
   of 2x2 so thumbnail sizes can be calculated).

== 0.1.1 2010-06-30

 * Create output directory when recording frames if necessary.
 * Only add Bulldog callbacks in classes that need them.
 * Fix comparison of attachments with non-attachment classes.
 * Don't create blank file when saving record with a missing file.

== 0.1.0 2010-06-23

 * Add Bulldog.path_root, for specifying per-environment roots.
 * Add :root interpolation key. Replaces :public_path for Rails apps.

== 0.0.15 2010-04-13

 * Fix image dimensions when exif:Orientation is 8.

== 0.0.14 2010-01-19

 * Optimizations.

== 0.0.13 2010-01-18

 * Strip images if the :stripped style attribute is set.

== 0.0.12 2010-01-18

 * Optimizations.

== 0.0.11 2009-12-03

 * Make Attachment::Base#process! take options like #process.

== 0.0.10 2009-12-01

 * Fix recording video frame when frame attachment already exists.

== 0.0.9 2009-11-18

 * Allow specifying a subset of styles to process via a :styles option
   to #process.

== 0.0.8 2009-11-18

 * Fix invocations of ffmpeg over multiple styles.

== 0.0.7 2009-11-17

 * Allow configuration through config/bulldog.yml in Rails.

== 0.0.6 2009-11-17

 * Add attachment#reload for when the file changes behind Bulldog's
   back.

== 0.0.5 2009-11-17

 * Fix @original_attachments not being set in after save.

== 0.0.4 2009-11-16

 * Fix destroying the original file when the record is destroyed.

== 0.0.3 2009-11-16

 * Add a way to respond to processing errors:
   - #process returns true/false.