@@ -1,3 +1,7 @@
+== LATEST
+
+ * #process accepts an :input_file option.
+
 == 0.2.2 2010-07-26
 
  * Support for assigning one attachment to another.
